--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Projects_Web/ProjectTwitter/style.css">
-    <link rel="icon" href="/Imagens/twitter.2 (1).png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="Imagens/twitter.2 (1).png">
     <title>Home / Twitter</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
             <div class="infoconta">
                 <div class="conteudoinfoconta">  
                     <fieldset>
-                        <div class="imgprofile"><img class="imagem" src="/Imagens/1d4d69c694c8ba1034c0e9552f457ecf.jpg"></div>
+                        <div class="imgprofile"><img class="imagem" src="Imagens/1d4d69c694c8ba1034c0e9552f457ecf.jpg"></div>
                         <div class="nomeconta">
                             <div class="nomeprincipal">
                                 Usuário
@@ -90,7 +90,7 @@
                         <div class="toptweets"><ion-icon name="sparkles-outline"></ion-icon></div>
                     </div>
                     <div class="meio">
-                        <div class="fotoperfil"><img class="perfil imagem" src="/Imagens/1d4d69c694c8ba1034c0e9552f457ecf.jpg"> </div>
+                        <div class="fotoperfil"><img class="perfil imagem" src="Imagens/1d4d69c694c8ba1034c0e9552f457ecf.jpg"> </div>
                         <div class="textodigitar"><textarea class="areatweet" placeholder="What's happening?"></textarea></div>
                     </div>
                     <div class="final">
@@ -107,7 +107,7 @@
                     <div class="postagem1">
                         <div class="partleftpost">
                             <div class="conteudopost1">
-                                <img class="perfil imagem" src="/Imagens/itVSA7l0_400x400.jpg">
+                                <img class="perfil imagem" src="Imagens/itVSA7l0_400x400.jpg">
                                 <div class="post1">
                                     <div class="infconta">
                                         <div class="nameconta">Elon Musk</div>
@@ -159,7 +159,7 @@
                    <div class="postagem2">
                     <div class="partleftpost">
                         <div class="conteudopost2">
-                            <img class="perfil imagem" src="/Imagens/MeuPaisCeara.jpg">
+                            <img class="perfil imagem" src="Imagens/MeuPaisCeara.jpg">
                             <div class="post2">
                                 <div class="infconta2">
                                     <div class="nameconta">Meu País Ceará®</div>
@@ -169,7 +169,7 @@
                                 </div>
                                 <div class="textopostagem2">
                                     Cearense reagindo ao desabafo de um amigo:
-                                    <fieldset style="border: none"><img class="post02"src="/Imagens/ImagemPost.jpg"></fieldset>
+                                    <fieldset style="border: none"><img class="post02"src="Imagens/ImagemPost.jpg"></fieldset>
                                 </div>
                                 <div class="curtidasinfos">
                                     <div class="infcurtidas coments areainteracao infcurtida">
@@ -217,7 +217,7 @@
                                 <div class="Tema">Newcastle United vs Manchester City</div>
                                 <div class="fonte">Trending with <a href="https://github.com/rochajpp" class="link">Newcastle</a></div>
                             </div>
-                                <img src="/Projects_Web/Imagens/News1.jpg" alt="">
+                                <img src="Imagens/News1.jpg" alt="">
                         </div>
                         <div class="new1">
                             <div class="conteudoNew">
@@ -225,7 +225,7 @@
                                 <div class="Tema">Newcastle United vs Manchester City</div>
                                 <div class="fonte">Trending with <a href="https://github.com/rochajpp" class="link">Newcastle</a></div>
                             </div>
-                                <img src="/Projects_Web/Imagens/News1.jpg" alt="">
+                                <img src="Imagens/News1.jpg" alt="">
                         </div>
                         <div class="new1">
                             <div class="conteudoNew">
@@ -233,7 +233,7 @@
                                 <div class="Tema">Newcastle United vs Manchester City</div>
                                 <div class="fonte">Trending with <a href="https://github.com/rochajpp" class="link">Newcastle</a></div>
                             </div>
-                                <img src="/Projects_Web/Imagens/News1.jpg" alt="">
+                                <img src="Imagens/News1.jpg" alt="">
                         </div>
                         <div class="new1">
                             <div class="conteudoNew">
@@ -241,7 +241,7 @@
                                 <div class="Tema">Newcastle United vs Manchester City</div>
                                 <div class="fonte">Trending with <a href="https://github.com/rochajpp" class="link">Newcastle</a></div>
                             </div>
-                                <img src="/Projects_Web/Imagens/News1.jpg" alt="">
+                                <img src="Imagens/News1.jpg" alt="">
                         </div>
                         <div class="new1">
                             <div class="conteudoNew">
@@ -249,7 +249,7 @@
                                 <div class="Tema">Newcastle United vs Manchester City</div>
                                 <div class="fonte">Trending with <a href="https://github.com/rochajpp" class="link">Newcastle</a></div>
                             </div>
-                                <img src="/Projects_Web/Imagens/News1.jpg" alt="">
+                                <img src="Imagens/News1.jpg" alt="">
                         </div>
                         <div class="showmore"><nav>Show More</nav></div>
                     </fieldset>
@@ -258,7 +258,7 @@
                    <fieldset style="font-family: sans-serif;">
                         <h1 style="color: white; margin: 20px;">Who to follow</h1>
                         <div class="perfil1">
-                            <img src="/Projects_Web/Imagens/Usuario-Tesla.png">
+                            <img src="Imagens/Usuario-Tesla.png">
                             <div class="nomeUsuario">
                                 <div style="color: white; font-size: 25px;">Tesla <ion-icon name="cloud-done"></ion-icon></div>
                                 <div style="color: rgb(129,129,129)">@Tesla</div>
@@ -266,7 +266,7 @@
                             <button>Follow</button>
                         </div>
                         <div class="perfil1">
-                            <img src="/Projects_Web/Imagens/logo-netflix.jpg">
+                            <img src="Imagens/logo-netflix.jpg">
                             <div class="nomeUsuario">
                                 <div style="color: white; font-size: 25px;">Netflix <ion-icon name="cloud-done"></ion-icon></div>
                                 <div style="color: rgb(129,129,129)">@netflix</div>
@@ -274,7 +274,7 @@
                             <button>Follow</button>
                         </div>
                         <div class="perfil1">
-                            <img  src="/Projects_Web/Imagens/logo-twitter.jpg">
+                            <img  src="Imagens/logo-twitter.jpg">
                             <div class="nomeUsuario">
                                 <div style="color: white; font-size: 25px;">Twitter <ion-icon name="cloud-done"></ion-icon></div>
                                 <div style="color: rgb(129,129,129)">@Twitter</div>
